--- a/server/static/index.html
+++ b/server/static/index.html
@@ -24,22 +24,36 @@
       name="og:description"
       content="Bot help you track your mining Binance and Xmr pool. Register on the Binance Pool and get lifetime Cashback of 20%, only when registering via the link: https://accounts.binance.com/ru/register?ref=BYJ46M9G"
     />
-    <meta property="og:image" content="logo.png" />
+    <meta property="og:image" content="icons/logo.png" />
     <meta property="og:image:width" content="200" />
     <meta property="og:image:height" content="200" />
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@miner_tracker_bot" />
-    <meta name="twitter:image" content="logo.png" />
+    <meta name="twitter:image" content="icons/logo.png" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
-    <link rel="manifest" href="site.webmanifest" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="icons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="icons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="icons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="icons/site.webmanifest" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
 
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto"
@@ -60,7 +74,7 @@
               <td class="align-top px-2">
                 <img
                   class="rounded-circle"
-                  src="logo.png"
+                  src="icons/logo.png"
                   alt="Binance Pool & Xmr Pool tracker"
                   width="96px"
                 />
