Fix style and text

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -14,7 +14,7 @@
     />
     <meta
       name="description"
-      content="Bot help you track your mining Binance and Xmr pool. Register on the Binance Pool and get lifetime Cashback of 20%, only when registering via the link: https://accounts.binance.com/ru/register?ref=BYJ46M9G"
+      content="Bot help you track your mining Binance and Xmr pool. Register on the Binance Pool and get lifetime Cashback of 20%, only when registering via the link: https://accounts.binance.com/en/register?ref=BYJ46M9G"
     />
     <meta
       property="og:title"
@@ -22,7 +22,7 @@
     />
     <meta
       name="og:description"
-      content="Bot help you track your mining Binance and Xmr pool. Register on the Binance Pool and get lifetime Cashback of 20%, only when registering via the link: https://accounts.binance.com/ru/register?ref=BYJ46M9G"
+      content="Bot help you track your mining Binance and Xmr pool. Register on the Binance Pool and get lifetime Cashback of 20%, only when registering via the link: https://accounts.binance.com/en/register?ref=BYJ46M9G"
     />
     <meta property="og:image" content="icons/logo.png" />
     <meta property="og:image:width" content="200" />
@@ -68,48 +68,50 @@
   <body>
     <main>
       <div class="container">
-        <div class="row justify-content-center">
-          <table class="mr-4 mb-3">
-            <tr>
-              <td class="align-top px-2">
-                <img
-                  class="rounded-circle"
-                  src="icons/logo.png"
-                  alt="Binance Pool & Xmr Pool tracker"
-                  width="96px"
-                />
-              </td>
-              <td class="align-middle pr-2">
-                <h1 class="h4">Binance Pool & Xmr Pool tracker</h1>
-                <div class="bot-head-status">
-                  <a
-                    href="https://t.me/miner_tracker_bot?do=open_link"
-                    target="_blank"
-                    rel="nofollow"
-                    >@miner_tracker_bot</a
-                  >
-                </div>
-              </td>
-            </tr>
-          </table>
-          <div class="d-flex align-items-center">
-            <a
-              href="https://ru.botostore.com/c/miner_tracker_bot/?do=open_bot"
-              class="mb-3 btn btn-secondary"
-              rel="nofollow"
-              >Open in Telegram</a
-            >
-            <a
-              href="https://ru.botostore.com/c/miner_tracker_bot/?do=open_link"
-              class="mb-3 ml-2 btn btn-primary"
-              target="_blank"
-              rel="nofollow"
-              >Open in Web</a
-            >
+        <div class="row no-gutters mx-auto">
+          <div class="row justify-content-between col-md-9 col-12 mx-auto">
+            <table class="mr-4 mb-3">
+              <tr>
+                <td class="align-top px-2">
+                  <img
+                    class="rounded-circle"
+                    src="icons/logo.png"
+                    alt="Binance Pool & Xmr Pool tracker"
+                    width="96px"
+                  />
+                </td>
+                <td class="align-middle pr-2">
+                  <h1 class="h4">Binance Pool & Xmr Pool tracker</h1>
+                  <div class="bot-head-status">
+                    <a
+                      href="https://t.me/miner_tracker_bot?do=open_link"
+                      target="_blank"
+                      rel="nofollow"
+                      >@miner_tracker_bot</a
+                    >
+                  </div>
+                </td>
+              </tr>
+            </table>
+            <div class="d-flex align-items-center">
+              <a
+                href="https://ru.botostore.com/c/miner_tracker_bot/?do=open_bot"
+                class="mb-3 btn btn-secondary"
+                rel="nofollow"
+                >Open in Telegram</a
+              >
+              <a
+                href="https://ru.botostore.com/c/miner_tracker_bot/?do=open_link"
+                class="mb-3 ml-2 btn btn-primary"
+                target="_blank"
+                rel="nofollow"
+                >Open in Web</a
+              >
+            </div>
           </div>
         </div>
         <div class="row no-gutters">
-          <div class="col-9 mx-auto">
+          <div class="col-md-9 col-12 mx-auto">
             <div id="bot-telegram" class="bot-chat">
               <div class="bot-chat-wm bot-chat-bubble">
                 <p>
@@ -120,12 +122,15 @@
                   Register on the Binance Pool and get lifetime Cashback of 20%,
                   only when registering via the link:<br />
                   <a
-                    href="https://accounts.binance.com/ru/register?ref=BYJ46M9G"
-                    >https://accounts.binance.com/ru/register?ref=BYJ46M9G</a
+                    href="https://accounts.binance.com/en/register?ref=BYJ46M9G"
+                    target="_blank"
+                    >https://accounts.binance.com/en/register?ref=BYJ46M9G</a
                   ><br /><br />
 
                   Buy me a coffee:<br />
-                  <a href="https://www.buymeacoffee.com/n1kko777"
+                  <a
+                    href="https://www.buymeacoffee.com/n1kko777"
+                    target="_blank"
                     >https://www.buymeacoffee.com/n1kko777</a
                   >
                 </p>
